# contributors-1

./: README.md  README_scriptmanager.txt
Scribus/: BUILDING  CMakeLists.txt  README_IMPOSER  README_MP_LOCK_GUIDES.txt  README_STATUSBAR.txt  README_TABULATORSWITCH  README_epub.txt  README_scribus-console.txt  Scribus.pro  scribus.git.files  scribus.git.includes
Scribus/cmake/modules/: FindICU.cmake
Scribus/scribus/: CMakeLists.txt  actionmanager.cpp  canvas.h  canvasgesture_resize.cpp  canvasgesture_rulermove.cpp  canvasgesture_rulermove.h  canvasmode.cpp  canvasmode_create.cpp  canvasmode_drawbezier.cpp  canvasmode_drawcalligraphic.cpp  canvasmode_drawfreehand.cpp  canvasmode_edit.cpp  canvasmode_editmeshgradient.cpp  canvasmode_editmeshpatch.cpp  canvasmode_editweldpoint.cpp  canvasmode_framelinks.cpp  canvasmode_importdata.cpp  canvasmode_importdata.h  canvasmode_magnifier.cpp  canvasmode_nodeedit.cpp  canvasmode_normal.cpp  canvasmode_objimport.cpp  canvasmode_rotate.cpp  collect4output.cpp  collect4output.h  filezip.cpp  filezip.h  fpointarray.cpp  fpointarray.h  gtgettext.cpp  gtgettext.h  langmgr.cpp  langmgr.h  pageitem.cpp  pageitem.h  pageitem_imageframe.cpp  pageitem_pathtext.cpp  pageitem_textframe.cpp  pageitem_textframe.h  pdflib_core.cpp  (+18 more)
Scribus/scribus/fonts/: CMakeLists.txt  fontfeatureset.cpp  fontfeatureset.h  scface.h  scface_ttf.cpp  scface_ttf.h  schbfunctions.cpp  schbfunctions.h  scicufont.cpp  scicufont.h
Scribus/scribus/imposer/: CMakeLists.txt  imposeinputfile.cpp  imposeoutputfile.cpp  imposeoutputfile.h  imposer.cpp  imposer.h  imposeroptions.cpp  imposeroptions.h
Scribus/scribus/imposition/: imposition.cpp  imposition.h  impositioninputfile.cpp  impositioninputfile.h  impositionoptions.cpp  impositionoptions.h  impositionoutputfile.cpp  impositionoutputfile.h
Scribus/scribus/plugins/: CMakeLists.txt
Scribus/scribus/plugins/export/: CMakeLists.txt
Scribus/scribus/plugins/export/epub/: CMakeLists.txt  README.txt  TODO.txt  epubexdialog.cpp  epubexdialog.h  epubexdialog.ui  epubexplugin.cpp  epubexplugin.h  epubexport.cpp  epubexport.h  epubexportCss.h  epubexportImage.h  epubexportScribusDoc.h  epubexportXhtml.h  epubexportdialog.cpp  epubexportdialog.h  epubexportdialog.ui  epubexportplugin.cpp  epubexportplugin.h
Scribus/scribus/plugins/export/epub/module/: epubexportCssParser.cpp  epubexportCssParser.h  epubexportEpub.cpp  epubexportEpub.h  epubexportImage.cpp  epubexportImage.h  epubexportMetadata.cpp  epubexportMetadata.h  epubexportScribusDoc.cpp  epubexportScribusDoc.h  epubexportStructure.cpp  epubexportStructure.h  epubexportStyle.cpp  epubexportStyle.h  epubexportText.cpp  epubexportText.h  epubexportXhtml.cpp  epubexportXhtml.h
Scribus/scribus/plugins/fileloader/scribus150format/: scribus150format.cpp  scribus150format.h  scribus150format_save.cpp
Scribus/scribus/plugins/import/: CMakeLists.txt
Scribus/scribus/plugins/import/ps/: CMakeLists.txt
Scribus/scribus/plugins/saveastemplateplugin/: satemplate.h
Scribus/scribus/plugins/scripter/: CMakeLists.txt  api_Scripter.dialogs.mainWindow.api  api_document.cpp  api_document.h  api_page.cpp  api_page.h  api_styleparagraph.cpp  api_styleparagraph.h
Scribus/scribus/plugins/scripter/doc/: reference_dialogs.html
Scribus/scribus/plugins/scriptmanager/: CMakeLists.txt  scriptmanager.ui  scriptmanagerplugin.cpp
Scribus/scribus/plugins/scriptplugin/scripts/: InfoBox.py
Scribus/scribus/plugins/statusbar/: CMakeLists.txt  statusbar.cpp  statusbar.h  statusbar.ui  statusbardialog.h  statusbarplugin.cpp  statusbarplugin.h  toolbar.cpp  toolbar.h
Scribus/scribus/plugins/tools/: CMakeLists.txt
Scribus/scribus/plugins/tools/transform/: transformdialog.cpp  transformeffect.cpp
Scribus/scribus/tests/: CMakeLists.txt  testStoryText.cpp
Scribus/scribus/text/: CMakeLists.txt  scbidi.cpp  scbidi.h  sctext_shared.cpp  shaper.cpp  shaper.h  specialchars.cpp  specialchars.h  storytext.cpp  storytext.h
Scribus/scribus/ui/: about.cpp  aligndistribute.ui  contextmenu.cpp  copypagetomasterpagedialog.cpp  customfdialog.cpp  customfdialog.h  gtdialogs.cpp  gtdialogs.h  hruler.cpp  hruler.h  info.cpp  info.h  info.ui  insertaframe.cpp  oneclick.cpp  oneclick.h  pagepalette_pages.cpp  pagepalette_pages.h  pageselector.cpp  pdfopts.cpp  prefs_itemtools.cpp  prefs_itemtoolsbase.ui  prefs_operatortoolsbase.ui  propertywidget_flop.cpp  smcstylewidget.ui  smpstylewidget.cpp  smpstylewidget.ui  smtextstyles.cpp  statusbar.cpp  statusbar.h  statusbar.ui  tabpdfoptions.cpp  tabpdfoptions.h
