INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
${FREETYPE_INCLUDE_DIRS}
..
)


SET(SCRIBUS_TEST_MOC_CLASSES
testStoryText.h
)

SET(SCRIBUS_TEST_SOURCES
runtests.cpp
testStoryText.cpp
)

IF(USE_QT5)
  QT5_WRAP_CPP(SCRIBUS_TEST_MOC_SOURCES ${SCRIBUS_TEST_MOC_CLASSES})
ELSE(USE_QT5)
  QT4_WRAP_CPP(SCRIBUS_TEST_MOC_SOURCES ${SCRIBUS_TEST_MOC_CLASSES})
ENDIF(USE_QT5)

SET(SCRIBUS_TESTS_LIB "scribus_tests_lib")
ADD_LIBRARY(${SCRIBUS_TESTS_LIB} STATIC ${SCRIBUS_TEST_SOURCES} ${SCRIBUS_TEST_MOC_SOURCES})
TARGET_LINK_LIBRARIES(${SCRIBUS_TESTS_LIB} ${QT_QTTEST_LIBRARY})

# This is a convenience library that for linkage purposes is part of Scribus's
# main API.
SET_TARGET_PROPERTIES(${SCRIBUS_TESTS_LIB}
  PROPERTIES
  COMPILE_FLAGS -DCOMPILE_SCRIBUS_MAIN_APP
  )
