INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_SCRIPTMANAGER_PLUGIN_MOC_CLASSES
  scriptmanagerplugin.h
)
SET(SCRIBUS_SCRIPTMANAGER_PLUGIN_SOURCES
  scriptmanagerplugin.cpp
)

SET(SCRIBUS_SCRIPTMANAGER_PLUGIN "scriptmanagerplugin")

QT4_WRAP_CPP(SCRIBUS_SCRIPTMANAGER_PLUGIN_MOC_SOURCES ${SCRIBUS_SCRIPTMANAGER_PLUGIN_MOC_CLASSES})
ADD_LIBRARY(${SCRIBUS_SCRIPTMANAGER_PLUGIN} MODULE ${SCRIBUS_SCRIPTMANAGER_PLUGIN_SOURCES} ${SCRIBUS_SCRIPTMANAGER_PLUGIN_MOC_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_SCRIPTMANAGER_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_SCRIPTMANAGER_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)
