INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_STATUSBAR_PLUGIN_UI_SRC
  toolbar.ui
)

SET(SCRIBUS_STATUSBAR_PLUGIN_MOC_CLASSES
  statusbarplugin.h
  toolbar.h
  statusbar.h
)

SET(SCRIBUS_STATUSBAR_PLUGIN_SOURCES
  statusbarplugin.cpp
  toolbar.cpp
  statusbar.cpp
)

SET(SCRIBUS_STATUSBAR_PLUGIN "statusbarplugin")

QT4_WRAP_UI(SCRIBUS_STATUSBAR_PLUGIN_UI_SOURCES ${SCRIBUS_STATUSBAR_PLUGIN_UI_SRC} )
QT4_WRAP_CPP(SCRIBUS_STATUSBAR_PLUGIN_MOC_SOURCES ${SCRIBUS_STATUSBAR_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_STATUSBAR_PLUGIN} MODULE ${SCRIBUS_STATUSBAR_PLUGIN_SOURCES} ${SCRIBUS_STATUSBAR_PLUGIN_MOC_SOURCES} ${SCRIBUS_STATUSBAR_PLUGIN_UI_CPP} ${SCRIBUS_STATUSBAR_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_STATUSBAR_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_STATUSBAR_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_STATUSBAR_PLUGIN} ${EXE_NAME})
