INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_EXPORTEPUB_PLUGIN_UI_SRC
  epubexdialog.ui
)

SET(SCRIBUS_EXPORTEPUB_PLUGIN_MOC_CLASSES
  epubexplugin.h
  epubexdialog.h
  epubexport.h
)

SET(SCRIBUS_EXPORTEPUB_PLUGIN_SOURCES
  epubexplugin.cpp
  epubexdialog.cpp
  epubexport.cpp
)

SET(SCRIBUS_EXPORTEPUB_PLUGIN "epubexplugin")

QT4_WRAP_UI(SCRIBUS_EXPORTEPUB_PLUGIN_UI_SOURCES ${SCRIBUS_EXPORTEPUB_PLUGIN_UI_SRC} )
QT4_WRAP_CPP(SCRIBUS_EXPORTEPUB_PLUGIN_MOC_SOURCES ${SCRIBUS_EXPORTEPUB_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_EXPORTEPUB_PLUGIN} MODULE ${SCRIBUS_EXPORTEPUB_PLUGIN_SOURCES} ${SCRIBUS_EXPORTEPUB_PLUGIN_MOC_SOURCES} ${SCRIBUS_EXPORTEPUB_PLUGIN_UI_CPP} ${SCRIBUS_EXPORTEPUB_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_EXPORTEPUB_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_EXPORTEPUB_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_EXPORTEPUB_PLUGIN} ${EXE_NAME})
